k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: uzbuzbiz/api-nest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # Puerto interno de NestJS
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jenkins
spec:
  selector:
    app: backend-api
  ports:
    - port: 80          # Puerto por el que escucha el Service (Ingress)
      targetPort: 3000  # Puerto al que redirige dentro del Pod (NestJS)
